# dota2_copilot

./: .gitignore  README.md  pyproject.toml
assets/: heroes.json  map_landmarks.yaml
config/: app.yaml
docs/: design.md
scripts/: experiment_match.py  fetch_assets.py
src/dota2_copilot/: __init__.py  cli.py  config.py  types.py
src/dota2_copilot/capture/: __init__.py  minimap.py  screen.py
src/dota2_copilot/tools/: __init__.py  calibrate_landmarks.py  calibrate_minimap.py  calibrate_topbar.py  debug_preview.py  detect_roster.py  record.py
